# course-DEV-IDE-with-AGENTS-hybrid

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  SESSION-HANDOFF.history.md  SESSION-HANDOFF.md  STORYBOARD-REVIEW-URLS.txt  TRIAL-4-URLS.txt  bmad-session-protocol-session-START.md  bmad-session-protocol-session-WRAPUP.md  claude-goal.txt  docker-compose.yml  goal-clustering-followalong-trial.txt  goal-composition-catalog-2026-06-25.txt  goal-concierge-leg1b-2026-06-30.txt  goal-enhanced-vo-2026-06-29.txt  goal-irene-literal-preserve-2026-07-09.txt  goal-marcus-planning-ratification-surface-2026-07-09.txt  goal-mine-next-completion-lanes-2026-07-10.txt  goal-phase2-six-mine-now-complete-2026-07-09.txt  next-session-start-here.md  pyproject.toml  requirements.txt
.cursor/: mcp.json
.cursor/agents/: amelia.md  john.md  marcus.md  murat.md  quinn.md  winston.md
.cursor/rules/: bmad-dual-agent-families.mdc  bmad-sprint-governance.mdc
.github/: copilot-instructions.md
.github/workflows/: activation-contract.yml  anti-drift-monitor.yml  codex-scope-audit.yml  manifest-lockstep.yml  mapping-checklist.yml  specialist-parity.yml  substrate-frozen-paths-check.yml  trial-replay.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
_bmad-output/: upstream-state.md
_bmad-output/economics-baselines/: migrated-runtime-characterization-2026-04-26.md
_bmad-output/implementation-artifacts/: 15-invariant-audit-matrix.md  27-2.5-consensus-adapter.md  2c-1-wondercraft-path-b-diff-evidence.md  36-1-prework-contract-frame-friction-scale.md  36-2-scene-extraction-lesson-type-adequacy.md  36-3-promise-transform-ratified-los.md  36-4-wire-prework-part2-golden.md  37-1-review-frame-bookend.md  37-2a-deep-dive-skeleton.md  37-2b-deep-dive-enrichment-cited.md  37-3-check-on-learning-retrieval.md  37-4-closing-reflection-shifted-question.md  38-0-two-packet-intake-contract.md  38-1-ask-a-enrichment-wiring.md  38-2-ask-b-hot-topics-wiring.md  38-3a-research-packet-consume-side.md  38-3b-graph-topology-band-orchestrator.md  39-1-glossary-downstream-render.md  39-1b-exercise-merge-composition.md  39-2-trends-door-ajar.md  40-1-cover-placeholder-hero-toc-provenance.md  40-2-workbook-cover-art-trove-selection.md  41-1-resume-recover-live-env-preflight.md  41-2-specialist-dispatch-fail-loud-silent-skip.md  41-3-production-sensible-max-specialist-calls-default.md  41-4-dollar-budget-enforced-stop.md  42-1-tabular-hil-neutral-next-action.md  42-2-hud-lifecycle-survives-gate-pause.md  42-3-full-run-settings-standing-readout.md  42-4-public-readonly-hud-stable-url.md  42-5-pre-walk-settings-confirm-gate.md  42-6-g0s-runner-default-wake-sentinel.md  42-7-manifest-structural-pins-refresh.md  42-8-ngrok-reserved-public-hud-tunnel.md  43-1-g0-directive-source-inventory-table.md  43-10-projector-coverage-registry-test.md  43-11-spoc-narration-projector-unification.md  43-12-governance-close-requirement-reopen.md  43-2-generic-gate-content-table-registry.md  43-3-variant-mode-selection-renderer.md  (+624 more)
_bmad-output/maps/: deferred-work.md
_bmad-output/planning-artifacts/: agentic-research-foundations-party-greenlight-2026-07-10.md  (+120 more)
_codex-handoff/: 7c-10.ready-for-review.md  7c-11.ready-for-review.md  7c-12.ready-for-review.md  7c-13.ready-for-review.md  7c-14.ready-for-review.md  7c-15.ready-for-review.md  7c-17a.ready-for-review.md  7c-17b.ready-for-review.md  7c-18a.ready-for-review.md  7c-18b.ready-for-review.md  7c-19.ready-for-review.md  7c-20a.ready-for-review.md  7c-20b.ready-for-review.md  7c-20c.ready-for-review.md  7c-21.ready-for-review.md  7c-21a.ready-for-review.md  7c-6.ready-for-review.md  7c-7.ready-for-review.md  7c-8.ready-for-review.md  7c-9.ready-for-review.md  p2-4c-s1-ready-for-review.md  p2-4c-s2-ready-for-review.md  p2-4c-s3-ready-for-review.md  pass2-figure-citation-gate-ready-for-review.md
app/: __init__.py  pass1_generation_lock.py  runtime_server.py  smoke_test.py
ci/: transport_parity_lane.md
docs/: ONBOARDING.md  STATE-OF-THE-APP.history.md  STATE-OF-THE-APP.md  admin-guide.history.md  admin-guide.md  agent-environment.md  dev-guide.history.md  dev-guide.md  parameter-directory.md  project-context.history.md  project-context.md  research-knobs-guide.md  user-guide.history.md  user-guide.md
maintenance/: cowork-project-setup-guide.md
marcus/: __init__.py  facade.py
schema/: adhoc_response.v1.schema.json  irene_pass_2_authoring.v1.schema.json  production_envelope.v1.schema.json  production_trial_envelope.v1.schema.json  trial_economics_report.v1.schema.json
scripts/: fidelity_drift_check.py  validate_fidelity_contracts.py
tests/: _smoke_suite_manifest.json  conftest.py  test_33_3_dc1_resolution.py  test_33_3_dc2_resolution.py  test_33_3_dc3_resolution.py  test_actor_fields_maya_serialization_safe.py  test_audit_gamma_docs_driver.py  test_base_client_error_body.py  test_blueprint_coauthor.py  test_blueprint_producer.py  test_check_pipeline_manifest_lockstep.py  test_cluster_aware_pass2_contract_docs.py  test_conftest_llm_live_gating.py  test_coverage_manifest_assert_plan_fresh_detection.py  test_coverage_manifest_plan_ref_verifier.py  test_coverage_manifest_regenerates_on_current_state.py  test_coverage_manifest_summary.py  test_creative_directive_schema.py  test_datetime_utc_enforcement.py  test_dials_boundary_values.py  test_digest_determinism.py  test_elevenlabs_client.py  test_emitter_manifest_reconciliation.py  test_event_envelope_mutation_revalidates.py  test_event_type_validator.py  test_experience_profiles.py  test_fit_report_emitter.py  test_fit_report_serializer.py  test_fit_report_smoke.py  test_fit_report_validator.py  test_gagne_diagnostician.py  test_gamma_image_model_enum_parity.py  test_hil_intake.py  test_identified_gap_suggested_posture_enum.py  test_integration_canva.py  test_integration_kira_motion.py  test_kling_client_auth.py  test_kling_client_polling.py  test_lesson_plan_log_append_only.py  test_lesson_plan_log_atomic_write.py  (+59 more)
(+4091 files in other folders)
