[project]
name = "course-dev-ide-with-agents"
version = "0.1.0"
description = "Collaborative intelligence infrastructure for course content production"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Juanl" }]
keywords = ["edtech", "course-production", "multi-agent", "content-creation"]

dependencies = [
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
    "PyJWT>=2.8,<3",
    "pydantic>=2.7,<3",
    "aiohttp>=3.9,<4",
    "pyyaml>=6.0,<7",
    "imageio-ffmpeg>=0.5,<1",
    "pypdf>=5.0,<6",
    "pillow>=11.0,<12",
    "python-pptx>=1.0,<2",
    "python-docx>=1.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-timeout>=2.3,<3",
    "responses>=0.25,<1",
    "ruff>=0.4,<1",
    "import-linter>=2.0,<3",
    "pre-commit>=3.7,<5",
    "jsonschema>=4.0,<5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# run_hud.py generates an HTML/CSS dashboard; embedded CSS/HTML strings in
# Python string literals are long by necessity and don't benefit from
# line-wrapping. Exempt E501 (line-too-long) for this file only.
"scripts/utilities/run_hud.py" = ["E501"]
# Dense validation / handoff messages; wrapping harms grep-ability of operator-facing errors.
"skills/bmad-agent-marcus/scripts/prepare-irene-pass2-handoff.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "skills/source-wrangler/scripts/tests",
    "skills/compositor/scripts/tests",
    "skills/bmad-agent-marcus/scripts/tests",
    "skills/bmad-agent-texas/scripts/tests",
    "skills/kling-video/scripts/tests",
]
pythonpath = [".", "skills/bmad-agent-texas/scripts"]  # retrieval/ package (Story 27-0)
asyncio_mode = "auto"
markers = [
    "live_api: tests that call live third-party APIs; excluded by default unless --run-live is provided",
    "live_api_e2e: slower/flakier live end-to-end API tests; excluded by default unless --run-live-e2e is provided",
    "trial_critical: dev-side tests guarding the pre-Prompt-1 trial path (run_constants validator, preflight receipt, pack-doc schema lockstep). Run before firing any trial production run via `pytest -m trial_critical`. Not a runtime gate — a dev confidence check.",
    "transport_parity: nightly / on-merge cadence; NOT per-PR — see Migration Story 1.1d Cadence + Flakiness Budget AC. Per the 2026-04-22 middle-path consensus, these MCP subprocess + FastAPI↔MCP parity tests carry per-PR-flake risk that does not belong on the Slab 1 critical path. >2% flake across the first 20 runs reopens MCP-in-Slab-1.",
]

[tool.importlinter]
root_packages = ["app"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "app.marcus and app.cora are lane-isolated siblings (D3 + D4 lane separation)"
type = "independence"
modules = ["app.marcus", "app.cora"]

[[tool.importlinter.contracts]]
name = "app.gates.** may not import schedulers (D3 HIL tamper-evidence)"
type = "forbidden"
source_modules = ["app.gates"]
forbidden_modules = ["threading", "apscheduler", "schedule"]
# TODO Slab 3: callable-level asyncio.sleep ban via ruff custom rule or import-time assertion in app/gates/resume_api.py

[[tool.importlinter.contracts]]
# Contract C3 (architecture §D3 HIL tamper-evidence).
# Only the three authorized verdict-bridge modules may import app.gates.resume_api:
#   - app.mcp_server.tools.gate_decide  (MCP tool surface — exists in Slab 1)
#   - app.http.gate_endpoint            (FastAPI surface — ships in Slab 3 Story 3.3)
#   - app.marcus.cli.gate_cli           (CLI surface — ships in Slab 3 Story 3.3)
# Forbidding the rest of the Slab-1 tree from importing resume_api prevents silent
# bypass of FR34 (no auto-approve) at any other layer. Slab 3 Story 3.3 adds the
# two future ignore_imports entries (`app.http.gate_endpoint ->` and
# `app.marcus.cli.gate_cli ->`) when the bridge modules materialize; import-linter
# rejects unused ignores, so pre-seeding them here would fail.
name = "Contract C3 — only the three authorized bridge modules may import app.gates.resume_api (D3)"
type = "forbidden"
source_modules = [
    "app.runtime",
    "app.specialists",
    "app.cora",
    "app.models",
    "app.manifest",
    "app.mcp_server",
]
forbidden_modules = ["app.gates.resume_api"]
ignore_imports = [
    "app.mcp_server.tools.gate_decide -> app.gates.resume_api",
    "app.specialists._scaffold.graph -> app.gates.resume_api",
    "app.specialists.irene.graph -> app.gates.resume_api",
    "app.specialists.kira.graph -> app.gates.resume_api",
    "app.specialists.texas.graph -> app.gates.resume_api",
    "app.specialists.gary.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for gary
    "app.specialists.vera.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for vera
    "app.specialists.quinn_r.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for quinn_r
    "app.specialists.desmond.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for desmond
    "app.specialists.tracy.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for tracy
    "app.specialists.cd.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for cd
    "app.specialists.enrique.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for enrique
    "app.specialists.wanda.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for wanda
    "app.specialists.kim.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for kim
    "app.specialists.vyx.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for vyx
    "app.specialists.aria.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for aria
    "app.specialists.mira.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for mira
    "app.specialists.tamara.graph -> app.gates.resume_api",  # generated by bmad-create-specialist for tamara
    # 2c.1 retire-to-fixtures: wanda_validation row removed at AC-F per Decision #2
    # (2026-04-25); fixture frozen at tests/fixtures/generator_validation/wanda_baseline/2026-04-25/
    # - see BASELINE_METADATA.md
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
